--- a/Verslag/SELMA.tex
+++ b/Verslag/SELMA.tex
@@ -3,12 +3,17 @@
 \title{SELMA}
 \author{ 
 Vonk, J\\
+(herhaler)\\
 s0132778\\
 Matenweg 75-201\\
 \\
 Florisson, M\\
+(herhaler)\\
 s0165972\\
-Box Calslaan 60-30}
+Box Calslaan 60-30\\
+\\
+Studentassistent:\\
+Edwin Smulders}
 
 \usepackage{listings}
 \usepackage{lscape}
